2021-02-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix Scheduler additional field provider compatibility with TYPO3 v10, resolves #156
	* Fix TCE structure being overwritten by reused variable, resolves #157

2021-02-04 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add info about additional fields being displayed as regular columns, resolves #154

2021-02-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve validation of "children" property, resolves #147

2021-02-01 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Allow for multiple validation messages per property, resolves #151

2020-12-20 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Style process steps tab, resolves #153

2020-12-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix image transformation methods to consider empty data as null too
	* Update composer manifest for Composer 2.0
	* Release version 5.0.1

2020-11-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Consider custom steps for preview in backend module, resolves #152

2020-10-21 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 5.0.0

2020-10-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Use ImporterAwareTrait in AbstractStep, resolves #149
	* Rename "userFunc" property to "userFunction" (and "params" to "parameters"), resolves #150

2020-10-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add example function for importing images in base64 format, resolves #145
	* Add missing renderType information to log table (thanks to Mathias Brodala)
	* Allow parameters to be passed to custom steps, resolves #130

2020-10-17 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ship own version of DataTables, resolves #144
	* Rely only on default mail address for sending report, resolves #139
	* Adapt to changed mail API

2020-10-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Actually delete records when "insert" and "update" operations are disabled, resolves #88